# rag-prod-level

./: README.md
backend/: pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 1ccda07d7798_add_documents_table.py  51cbe2ff79a5_add_documents_table.py  5339dabc08ce_add_status_to_document.py  65847370fc1e_add_chats_messages_chat_id_to_documents.py  8af3fb44ff97_added_chat_model.py
backend/app/db/: models.py
backend/app/routers/: auth.py  chats.py  websocket.py
backend/app/services/: LangGraph.py  chromadb.py  data_ingestion.py  llm_call.py
backend/app/utils/: load_pptx.py  load_xls.py  load_xlsx.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/google/: route.ts
frontend/app/api/chats/: route.ts
frontend/app/api/chats/[chatId]/: route.ts
frontend/app/api/chats/[chatId]/messages/: route.ts
frontend/app/api/chats/[chatId]/upload-doc/: route.ts
frontend/app/components/: AssistantMessage.tsx  ChatComponent.tsx  ChatMockup.tsx  ChatSidebar.tsx  LoginButton.tsx  Navbar.tsx
frontend/lib/: allowed-documents.ts
